tests/fixtures/invalid/divmod_str_int.py
# Cannot call divmod() with Str, Int
x = divmod("hello", 1)
